--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "india-chatroom",
+  "name": "india-chat-backend",
   "version": "1.0.0",
-  "description": "Simple India chatroom using Node.js, Socket.IO and MongoDB",
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.6.1",
-    "socket.io": "^4.7.2"
+    "express": "^4.18.2"
   }
 }
+
